unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Popu_Using_Device_Every_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Popu_Using_Device_Every_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall
Population Using Device Every Time</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall Population Using Device Every Time</inlineHelpText>
        <label>Unused Overall Popu. Using Device</label>
        <type>Checkbox</type>
    </CustomField>