unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Population_Using_Device_Serious__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Population_Using_Device_Serious__c</fullName>
        <label>Overall Population Using Device</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Every Time</fullName>
                </value>
                <value>
                    <fullName>Reasonable Prob. that Use will Cause</fullName>
                </value>
                <value>
                    <fullName>Remote Probability that Use will Cause</fullName>
                </value>
                <value>
                    <fullName>Not Likely that Use will Cause Any AE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>