unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Panel_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Panel_Code__c</fullName>
        <description>Panel Code</description>
        <inlineHelpText>Panel Code</inlineHelpText>
        <label>Panel Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>