unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Pemanent_Body_Damage_Overallpop__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Pemanent_Body_Damage_Overallpop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Results in permanent impairment of body function or
permanent damage to a body structure</description>
        <inlineHelpText>Results in permanent impairment of body function or
permanent damage to a body structure</inlineHelpText>
        <label>Unused Permanent Body Damage Results</label>
        <type>Checkbox</type>
    </CustomField>