unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Pop_Great_Risk_Not_Likely_CauseAdv_Ev__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Pop_Great_Risk_Not_Likely_CauseAdv_Ev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Not Likely that Use will cause Any Advese Events</description>
        <inlineHelpText>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Not Likely that Use will cause Any Advese Events</inlineHelpText>
        <label>Unused Pop.Great Risk,Not Likely,CauseAE</label>
        <type>Checkbox</type>
    </CustomField>