unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Pop_Great_Risk_Not_Likely_CauseAdverseEv__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Pop_Great_Risk_Not_Likely_CauseAdverseEv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Not Likely that Use will Cause Adverse Events</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Not Likely that Use will Cause Adverse Events</inlineHelpText>
        <label>Unused Pop.Great Risk,Not Likely,CauseAE</label>
        <type>Checkbox</type>
    </CustomField>