unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_At_Great_Risk_Remote_Probabil__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_At_Great_Risk_Remote_Probabil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Population Great Risk, Remote Probability that Use will cause</description>
        <inlineHelpText>Population Great Risk, Remote Probability that Use will cause</inlineHelpText>
        <label>Unused Popu. At Great Risk Remote Prob</label>
        <type>Checkbox</type>
    </CustomField>