unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_At_Great_Risk_Remote_Probability__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_At_Great_Risk_Remote_Probability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Remote Probablity that Use will cause</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Remote Probablity that Use will cause</inlineHelpText>
        <label>Unused Popu. At Great Risk Remote Prob</label>
        <type>Checkbox</type>
    </CustomField>