unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_at_greatest_risk_every_time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_at_greatest_risk_every_time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population At Greatest Risk Every Time</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population At Greatest Risk Every Time</inlineHelpText>
        <label>Unused Popu. At Greatest Risk Every</label>
        <type>Checkbox</type>
    </CustomField>