unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_At_Greatest_Risk_EveryTime__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_At_Greatest_Risk_EveryTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Every Time</description>
        <inlineHelpText>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Every Time</inlineHelpText>
        <label>Unused Popu. At Greatest Risk Every</label>
        <type>Checkbox</type>
    </CustomField>