unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_Great_Risk_Reasonable_Proba__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_Great_Risk_Reasonable_Proba__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Reasonable Probability that Use will cause</description>
        <inlineHelpText>Medically reversible or Transient Adverse Health Consequences -- Population Great Risk, Reasonable Probability that Use will cause</inlineHelpText>
        <label>UnusedPopu. Great Risk, Reasonable Prob.</label>
        <type>Checkbox</type>
    </CustomField>