unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Popu_Great_Risk_Reasonable_Probability__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Popu_Great_Risk_Reasonable_Probability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Reasonable Probablity that Use will cause</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Population Great Risk, Reasonable Probablity that Use will cause</inlineHelpText>
        <label>UnusedPopu. Great Risk, Reasonable Prob.</label>
        <type>Checkbox</type>
    </CustomField>