unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Population_at_Greatest_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Population_at_Greatest_Risk__c</fullName>
        <inlineHelpText>Select All that Might Occur</inlineHelpText>
        <label>Population at Greatest Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Life-threatening(death has/could occur)</fullName>
                </value>
                <value>
                    <fullName>Permanent impairment of body function</fullName>
                </value>
                <value>
                    <fullName>Necessitates med./surgical intervention</fullName>
                </value>
                <value>
                    <fullName>Temporary or reversible</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>No adverse health consequences</fullName>
                </value>
                <value>
                    <fullName>Hazard cannot be assessed currently</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>