unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Population_at_Greatest_Risk_Serious__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Population_at_Greatest_Risk_Serious__c</fullName>
        <description>Population at Greatest Risk</description>
        <inlineHelpText>Population at Greatest Risk</inlineHelpText>
        <label>Population at Greatest Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Every Time</fullName>
                </value>
                <value>
                    <fullName>Reasonable Prob. that Use will Cause</fullName>
                </value>
                <value>
                    <fullName>Remote Probability that Use will Cause</fullName>
                </value>
                <value>
                    <fullName>Not Likely that Use will Cause Any AE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>