unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Product_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Product_Code__c</fullName>
        <description>Product Code</description>
        <inlineHelpText>Product Code</inlineHelpText>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>