unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Product_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Product_Description__c</fullName>
        <description>Product Description (Include Intended Use From Labeling)</description>
        <inlineHelpText>Product Description (Include Intended Use From Labeling)</inlineHelpText>
        <label>Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>