unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__RES__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__RES__c</fullName>
        <description>RES#</description>
        <inlineHelpText>RES#</inlineHelpText>
        <label>RES#</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>