unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Root_Cause_of_the_Problem_If_Known__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Root_Cause_of_the_Problem_If_Known__c</fullName>
        <description>Root Cause of the Problem (If Known)</description>
        <inlineHelpText>Root Cause of the Problem (If Known)</inlineHelpText>
        <label>Root Cause of the Problem (If Known)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>