unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Safety_Officer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Safety_Officer__c</fullName>
        <description>Safety Officer:</description>
        <inlineHelpText>Safety Officer:</inlineHelpText>
        <label>Safety Officer</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>