unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Segment_of_Population_is_Most_at_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Segment_of_Population_is_Most_at_Risk__c</fullName>
        <description>What Segment of the Population is Most at Risk? (e.g. Infants, Elderly, Pregnant Women, Critically Ill
Patients, Immunocompromised, etc.)</description>
        <inlineHelpText>What Segment of the Population is Most at Risk? (e.g. Infants, Elderly, Pregnant Women, Critically Ill
Patients, Immunocompromised, etc.)</inlineHelpText>
        <label>Unused Segment of Population is Most</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>