unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Segmentof_Population_is_Most_at_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Segmentof_Population_is_Most_at_Risk__c</fullName>
        <description>What Segment of the Population is Most at Risk? (e.g. Infants, Elderly, Pregnant Women, Critically Ill
Patients, Immunocompromised, etc.)</description>
        <inlineHelpText>What Segment of the Population is Most at Risk? (e.g. Infants, Elderly, Pregnant Women, Critically Ill
Patients, Immunocompromised, etc.)</inlineHelpText>
        <label>Segment of Population Most at Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>