unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Select_Hazard_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Select_Hazard_Type__c</fullName>
        <label>Select Hazard Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Population at Greatest Risk</fullName>
                </value>
                <value>
                    <fullName>Overall Population Using Device</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>