unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Sources_Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Sources_Manufacturer__c</fullName>
        <inlineHelpText>Sources : Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>