unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Summary__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Summary__c</fullName>
        <description>Summary</description>
        <inlineHelpText>Summary</inlineHelpText>
        <label>Unused Summary</label>
        <type>TextArea</type>
    </CustomField>