unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Summary_Latest_Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Summary_Latest_Field__c</fullName>
        <description>Summary</description>
        <inlineHelpText>Summary</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>