unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Temporary_Or_Reversible_Reversible__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Temporary_Or_Reversible_Reversible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary or reversible (without medical intervention)</description>
        <inlineHelpText>Temporary or reversible (without medical intervention)</inlineHelpText>
        <label>Unused Temporary/Reversible</label>
        <type>Checkbox</type>
    </CustomField>