unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Total_Devices_In_Distribution_In_Foreign__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Total_Devices_In_Distribution_In_Foreign__c</fullName>
        <description>Total Number Of Devices In Distribution In Foreign</description>
        <inlineHelpText>Total Number Of Devices In Distribution iN Forign</inlineHelpText>
        <label>Total Devices In Distribution In Foreign</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>