unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Total_No_Of_Devices_To_Recall_or_Review__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Total_No_Of_Devices_To_Recall_or_Review__c</fullName>
        <description>Total No. Of Devices To Recall or Review</description>
        <inlineHelpText>Total Number Of Devices Subject To Recall or Review</inlineHelpText>
        <label>Total No. Of Devices To Recall or Review</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>