unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Total_Number_Of_Devices_In_Distrb_In_US__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Total_Number_Of_Devices_In_Distrb_In_US__c</fullName>
        <description>Total Number Of Devices In Distribution in US</description>
        <inlineHelpText>Total Number Of Devices In Distribution in US</inlineHelpText>
        <label>Total Number Of Devices In Distrb. In US</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>