unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Total_Number_Of_Devices_In_Distribution__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Total_Number_Of_Devices_In_Distribution__c</fullName>
        <description>Total Number Of Devices In Distribution</description>
        <inlineHelpText>Total Number Of Devices In Distribution</inlineHelpText>
        <label>Total Number Of Devices In Distribution</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>